[X86] Support X86 OpenBlas (WITH_MKL=OFF) (#4575)
* [X86] fix build cmake and softmax when mkl off, test=develop

* [X86] add x64 compile support on windows, test=develop

* address review comments, test=develop

--- a/docs/demo_guides/x86.md
+++ b/docs/demo_guides/x86.md
@@ -197,21 +197,30 @@ int main(int argc, char** argv) {
 ```bash
 git clone https://github.com/PaddlePaddle/Paddle-Lite.git
 # 切换到release分支
-git checkout release/v2.6.0
+git checkout release/v2.7
 ```
 2、 源码编译(需要按照提示输入对应的参数)
 
 ```dos
 cd Paddle-Lite
 lite\tools\build_windows.bat with_extra with_python with_profile
+
+# 注意默认编译Windows X86平台，如果需要编译X64平台，需要加入build_x64选项
+lite\tools\build_windows.bat build_x64
+
+# 如果需要根据模型裁剪预测库，则需要在with_strip之后输入opt model dir的路径
+lite\tools\build_windows.bat with_strip D:\Paddle-Lite\opt_model_dir
 ```
 编译脚本`build_windows.bat`，追加参数说明：
 
 |   参数     |     介绍     |     值     |
 |-----------|-------------|-------------|
-|  with_extra | 可选，是否编译全量预测库（默认为OFF）。详情可参考[预测库说明](./library.html)。 | `ON`、`OFF` |
-|  with_python | 可选，是否编译python预测库（默认为OFF） 。 | `ON`、`OFF` |
-|  with_profile | 可选，是否支持分析器模式（默认为OFF） 。 | `ON`、`OFF` |
+|  with_log | 可选，是否编译带日志的预测库（默认为OFF）| `ON`、`OFF` |
+|  with_extra | 可选，是否编译全量预测库（默认为OFF），详情可参考[预测库说明](./library.html)。 | `ON`、`OFF` |
+|  with_python | 可选，是否编译python预测库（默认为OFF）| `ON`、`OFF` |
+|  with_profile | 可选，是否支持分析器模式（默认为OFF）| `ON`、`OFF` |
+|  with_strip | 可选，是否根据模型裁剪预测库（默认为OFF），详情可参考[裁剪预测库](../source_compile/library_trailoring.html)。| `ON`、`OFF` |
+|  build_x64 | 可选，是否编译X64平台预测库（默认为OFF）| `ON`、`OFF` |
 
 ### 编译结果说明
 
